[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Entities/OtherPlayer.gd" type="Script" id=1]
[ext_resource path="res://Sounds/hit.ogg" type="AudioStream" id=2]
[ext_resource path="res://Sounds/bang.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sounds/shield_deploy.ogg" type="AudioStream" id=4]
[ext_resource path="res://Models/Player.tres" type="ArrayMesh" id=5]
[ext_resource path="res://Models/Fire Ball.tres" type="SphereMesh" id=7]
[ext_resource path="res://Scripts/Helpers/FlickerLight.gd" type="Script" id=8]

[sub_resource type="CapsuleShape" id=1]
height = 1.9

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.1942 ), 0.0, 0.0, 0, 0, Vector2( 0.138515, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="OtherPlayer" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="ShootSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_db = 25.0
max_db = 6.0

[node name="ShieldSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_db = 20.0
max_db = 6.0

[node name="Player" type="MeshInstance" parent="."]
transform = Transform( -2, 0, -1.74846e-07, 0, 2, 0, 1.74846e-07, 0, -2, 0.0192136, -1.81413, 0.176564 )
mesh = ExtResource( 5 )
material/0 = null

[node name="Particles" type="CPUParticles" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.273265, 0.856359, -0.626869 )
cast_shadow = 0
lifetime = 0.5
mesh = ExtResource( 7 )
flag_rotate_y = true
spread = 180.0
gravity = Vector3( 0, 5, 0 )
initial_velocity = 0.5
initial_velocity_random = 1.0
angular_velocity = 25.0
angular_velocity_random = 1.0
damping = 3.0
scale_amount = 0.1
scale_amount_curve = SubResource( 2 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.289094, 0.940244, -0.614919 )
light_color = Color( 0.937255, 0.760784, 0.337255, 1 )
omni_range = 3.0
omni_attenuation = 2.0
script = ExtResource( 8 )
